cross platform, robust input finally

--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
         </style>
     </head>
     <body>
-
         <script src="lib/three.js"></script>
         <script src="lib/tween.js"></script>
-        <script src="lib/TessellateModifier.js"></script>
-        <!-- <script src="objects/three.js"></script> -->
-        <script src="objects/box.js"></script>
+        <!-- <script src="lib/TessellateModifier.js"></script> -->
         <script src="objects/bun.js"></script>
         <script src="objects/text.js"></script>
         <script src="passes.js"></script>
+        <script src="menu.js"></script>
         <script src="main.js"></script>
 
     </body>
