--- a/index.html
+++ b/index.html
@@ -7,18 +7,98 @@
         <style>
             body {
                 margin: 0px;
-                background-color: #000000;
+                background-color: #000;
                 overflow: hidden;
+            }
+            .div1{
+                position: absolute;
+                top: -10;
+                width:100vw;
+                font-size: 2em;
+                text-align: center;
+                /*color: #DAD8A7;*/
+                color: #585858;
+            }
+            .div4{
+                position: absolute;
+                width:100vw;
+                bottom: 20px;
+                font-size: 2em;
+                color: #585858;
+                text-align: center;
+            }
+            .div3{
+                font-size: 4em;
+                text-align: center;
+                /*color: #DAD8A7;*/
+            }
+            .div2
+            {
+                white-space: nowrap;
+                font-weight: bold;
+                font-family: Helvetica;
+
+                -webkit-touch-callout: none;
+                -webkit-user-select: none;
+                -khtml-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
+            }
+
+            #title {
+             transition: transform 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+            }
+
+            #subtitle {
+             transition: transform 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+            }
+
+            #title.left {
+                
+            }
+
+            #subtitle.left {
+
+            }
+
+            #title.right {
+                transform: translateY(-200px);
+            }
+
+            #subtitle.down {
+                transform: translateY(200px);
             }
         </style>
     </head>
     <body>
+        <div class="div1 div2 div3">
+        <div id="title" class="left">
+        stress
+        </div>
+        </div>
+        <div class="div4 div2">
+        <div id="subtitle" class="left">
+        drag to start
+        </div>
+        </div>
+        <script>
+        var box = document.getElementById('title');
+        var box2 = document.getElementById('subtitle');
+
+        function toggle() {
+          if (box.className == 'left') box.className = 'right';
+          if (box2.className == 'left') box2.className = 'down';
+        }
+        </script>
         <script src="lib/three.js"></script>
         <script src="lib/tween.js"></script>
+        <script src="lib/howler.js"></script>
         <!-- <script src="lib/TessellateModifier.js"></script> -->
         <script src="objects/bun.js"></script>
         <script src="objects/text.js"></script>
         <script src="passes.js"></script>
+        <script src="sound.js"></script>
         <script src="menu.js"></script>
         <script src="main.js"></script>
 
