--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
         </div>
         <div class="div4 div2">
         <div style="font-size: .8em;" id="subtitle" class="left">
-        drag to start <br/>
-        best if used with sound
+        drag to an edge to start <br/>
+        best experienced with sound
         </div>
         </div>
         <script>
         var box = document.getElementById('title');
         var box2 = document.getElementById('subtitle');
-        var toggleCounter = 3;
+        var toggleCounter = 4;
         function toggle() {
             if(--toggleCounter <= 0)
             {
